Fix checkbox vertical alignment

--- a/src/static/scss/utilities/_utilities.shame.scss
+++ b/src/static/scss/utilities/_utilities.shame.scss
@@ -124,3 +124,7 @@ body {
     font-size: 11px !important;
     text-transform: uppercase !important;
 }
+
+.c-checkbox {
+    vertical-align: baseline !important;
+}
